--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     background-color: rgb(241, 241, 241);
 }
 
-header {
+header, footer {
     height: 100px;
     background-color: rgb(241, 207, 207);
     font-family: Arial, Helvetica, sans-serif;    
@@ -57,3 +57,27 @@ h2 {
     margin: 15px;
     font-size: 24px;
 }
+
+span {
+    font-weight: bold;
+}
+
+.newClass {
+    background-color: aquamarine;
+}
+
+.newbox {
+    background-color: pink;
+    width: 15px;
+    height: 150px;
+    transform: rotate(100deg);
+    transition: width 2s, height 2s, background-color 2s, transform 2s;
+}
+
+.box {
+    border-style: solid;
+    border-width: 1px;
+    width: 100px;
+    height: 100px;
+    background-color: blueviolet;
+    }
