--- a/style.css
+++ b/style.css
@@ -21,10 +21,6 @@ h1{
     margin: auto;
 }
 
-#selectors {
-    height: auto;
-}
-
 .explanations {
     padding: 5%;
     background-color: rgb(161, 161, 192);
@@ -56,6 +52,7 @@ p{
 h2 {
     margin: 15px;
     font-size: 24px;
+    font-family: sans-serif
 }
 
 span {
@@ -66,18 +63,20 @@ span {
     background-color: aquamarine;
 }
 
-.newbox {
-    background-color: pink;
-    width: 15px;
-    height: 150px;
-    transform: rotate(100deg);
-    transition: width 2s, height 2s, background-color 2s, transform 2s;
-}
-
 .box {
-    border-style: solid;
-    border-width: 1px;
     width: 100px;
     height: 100px;
     background-color: blueviolet;
-    }
+    transition: width 2s, height 2s, background-color 2s, transform 2s;
+    margin: auto;
+
+}
+
+.rectangle {
+    background-color: pink;
+    width: 15px;
+    height: 150px;
+    transform: rotate(90deg);
+    transition: width 2s, height 2s, background-color 2s, transform 2s;
+    margin: auto;
+}
